Add game play check api
